tests/NormalTests/paczka1/small_fuzzy/56601282.err
Error in line 4: A433 S732 92,6
Error in line 8: CQdLu S362 87,2
Error in line 12: CQdLu S732 18,5
Error in line 7: A433 A433 23,1
